--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-    <a class="navbar-brand" href>LOGO</a>
+    <a class="navbar-brand" href="">LOGO</a>
     <div class="bd">
         <p class="bd-h">Menu</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -38,62 +38,62 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">WEDDINGS</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item">FAVOURITES</a>
-                    <a class="dropdown-item">CEREMONY AND RECEPTION VENUES</a>
-                    <a class="dropdown-item">ENGAGEMENTS</a>
+                    <a href="#" class="dropdown-item">FAVOURITES</a>
+                    <a href="#" class="dropdown-item">CEREMONY AND RECEPTION VENUES</a>
+                    <a href="#" class="dropdown-item">ENGAGEMENTS</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">ABOUT</a>
+                <a href="#" class="nav-link">ABOUT</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">INFO</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item">FAQ</a>
-                    <a class="dropdown-item">REFFERALS</a>
-                    <a class="dropdown-item">REVIEWS</a>
+                    <a href="#" class="dropdown-item">FAQ</a>
+                    <a href="#" class="dropdown-item">REFFERALS</a>
+                    <a href="#" class="dropdown-item">REVIEWS</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">CONTACT</a>
+                <a href="#" class="nav-link">CONTACT</a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">BLOG</a>
+                <a href="#" class="nav-link">BLOG</a>
             </li>
         </ul>
         <ul class="navbar-nav nav-li pt-3">
-            <li class="nav-item">
-                <a class="nav-link" data-class="fixed-left">
+            <li class="nav-item nv-link">
+                <a data-class="fixed-left">
                     FOR CLIENTS
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">
+                <a href="#" target="_blank" class="nav-link">
                     <i class="fa fa-facebook"></i>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">
+                <a href="#" target="_blank" class="nav-link">
                     <i class="fa fa-youtube-play"></i>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">
+                <a href="#" target="_blank" class="nav-link">
                     <i class="fa fa-envelope"></i>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">
+                <a href="#" target="_blank" class="nav-link">
                     <i class="fa fa-instagram"></i>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">
+                <a href="#" target="_blank" class="nav-link">
                     <i class="fa fa-twitter"></i>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">
+                <a href="#" target="_blank" class="nav-link">
                     <i class="fa fa-facebook"></i>
                 </a>
             </li>
